bruker field array for å lage liste av perioder

--- a/src/app/components/steps/periode/periodeList.less
+++ b/src/app/components/steps/periode/periodeList.less
@@ -18,3 +18,15 @@
         }
     }
 }
+
+.periode-date-picker-row {
+    border: 1px dotted green;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+.periode-date-picker-element {
+    border: 1px dotted red;
+    display: inline-block;
+}
