delvis retter styling på perioder

--- a/src/app/components/steps/periode/periodeStep.less
+++ b/src/app/components/steps/periode/periodeStep.less
@@ -49,6 +49,27 @@
   }
 }
 
+@media (min-width: 736px) {
+  .periode-row-wrapper:first-child {
+    margin-right: 52px;
+  }
+}
+
+.periode-row-wrapper {
+  margin-top: 1rem;
+}
+
 .legg-til-wrapper {
   margin-top: 2rem;
+}
+
+.delete-button-wrapper {
+  text-align: center;
+  padding-top: 2rem;
+}
+
+@media (max-width: 736px) {
+  .delete-button-wrapper {
+    padding-top: 0.5rem;
+  }
 }
