--- a/src/app/components/søknad/steps/periode/periodeStep.less
+++ b/src/app/components/søknad/steps/periode/periodeStep.less
@@ -1,75 +1,56 @@
-.dateIntervalPicker {
-  margin-bottom: 1rem;
-
-  > .skjemagruppe__legend {
-    margin-bottom: 0.5rem;
-  }
-
-  &__flexContainer {
+.perioderMedFulltFravarListItem {
     display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    background-color: #efefef;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    margin: 2px 0;
+
+    .dateIntervalPicker {
+        margin: 0;
+    }
+    &__rangeWrapper {
+        flex: 2 1 100%;
+        label {
+            position: absolute;
+            left: -2000px;
+        }
+    }
+    &__deleteButtonWrapper {
+        padding-left: 1rem;
+        text-align: right;
+        justify-self: flex-end;
+        padding-bottom: 0.2rem;
+    }
+    &:first-child:last-child {
+        padding-bottom: 1.5rem;
+    }
+    &--firstRow {
+        label {
+            position: relative;
+            left: initial;
+        }
+        label  {
+            margin-bottom: 0.5rem;
+        }
+        border: none;
+    }
 
     @media (max-width: 736px) {
-      display: block;
-
-      .skjemaelement:not(:first-child) {
-        margin-top: 1rem;
-      }
-    }
-
-    .skjemagruppe {
-      margin-right: 1rem;
-      margin-bottom: 0;
-      width: 50%;
-      &__label {
-        font-weight: normal;
-      }
-      &:last-child {
-        margin-right: 0;
-      }
-
-      @media (max-width: 736px) {
-        width: 100% !important;
-
-        .nav-datovelger__kalenderPortal:not(.nav-datovelger__kalenderPortal--fullskjerm) {
-          top: calc(100% + 10px);
-          width: 100%;
-          text-align: center;
-          background-color: white;
+        .singleInputWrapper:first-child {
+            margin-bottom: 1rem;
         }
-      }
-
-      .nav-datovelger {
-        width: 100%;
-
-        &__inputContainer {
-          width: 100%;
+        &__rangeWrapper {
+            label {
+                position: relative;
+                left: initial;
+            }
         }
-      }
+        display: block;
+        &__deleteButtonWrapper {
+            text-align: left;
+            padding: 1rem 0 0 0;
+        }
     }
-  }
-}
-
-@media (min-width: 736px) {
-  .periode-row-wrapper:first-child {
-    margin-right: 52px;
-  }
-}
-
-.periode-row-wrapper {
-  margin-top: 1rem;
-}
-
-.legg-til-wrapper {
-  margin-top: 2rem;
-}
-
-.delete-button-wrapper {
-  text-align: center;
-  padding-top: 2rem;
-}
-
-@media (max-width: 736px) {
-  .delete-button-wrapper {
-    padding-top: 0.5rem;
-  }
 }
