--- a/src/app/components/søknad/steps/periode/periodeStep.less
+++ b/src/app/components/søknad/steps/periode/periodeStep.less
@@ -1,11 +1,11 @@
 .fravarFormItem() {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
     background-color: #efefef;
     padding: 1rem;
     border-radius: 0.5rem;
     margin: 2px 0;
+    align-items: flex-start;
 }
 
 .hideLabels() {
@@ -15,13 +15,14 @@
     }
 }
 .deleteButtonWrapper() {
+    margin-top: 0.25rem;
     padding-left: 1rem;
     text-align: right;
     justify-self: flex-end;
-    padding-bottom: 0.25rem;
 }
 
 .firstRow() {
+    align-items: flex-end;
     label {
         position: relative;
         left: initial;
@@ -49,6 +50,9 @@
     }
     &--firstRow {
         .firstRow();
+        .dagerMedDelvisFravarListItem__deleteButtonWrapper {
+            padding-bottom: 0.25rem;
+        }
     }
 }
 
@@ -70,6 +74,9 @@
     }
     &--firstRow {
         .firstRow();
+        .perioderMedFulltFravarListItem__deleteButtonWrapper {
+            padding-bottom: 0.25rem;
+        }
     }
 
     @media (max-width: 736px) {
