--- a/src/app/components/søknad/steps/periode/periodeStep.less
+++ b/src/app/components/søknad/steps/periode/periodeStep.less
@@ -1,3 +1,10 @@
+.periodelistGroup {
+    > .typo-feilmelding {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+}
+
 .fravarFormItem() {
     display: flex;
     flex-direction: row;
