--- a/src/app/søknad/periode-step/periodeStep.less
+++ b/src/app/søknad/periode-step/periodeStep.less
@@ -42,12 +42,16 @@
 
 .dagerMedDelvisFravarListItem {
     .fravarFormItem();
+    .nav-datovelger,
+    .nav-datovelger__inputContainer {
+        width: 100%;
+    }
     &__dateWrapper {
         .hideLabels();
-        flex-basis: 40%;
+        flex-basis: 49%;
     }
     &__hoursWrapper {
-        flex-basis: 40%;
+        flex-basis: 31%;
         .skjemaelement {
             margin-bottom: 0;
         }
