forbedre styling på inntektsendring modal og liste av endringer

--- a/src/app/components/inntektsendring/inntektsendring.less
+++ b/src/app/components/inntektsendring/inntektsendring.less
@@ -12,7 +12,34 @@
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  &__itemInlineContent {
-    display: inline-flex;
+}
+
+@media (max-width: 736px) {
+  .inntektsendring-list {
+    &__item {
+    }
   }
+}
+
+@media (min-width: 737px) {
+  .inntektsendring-list {
+    &__item {
+    }
+  }
+}
+
+.inntektsendring-knapp1 {
+  padding-right: 1rem;
+}
+
+.inntektsendring-knapp2 {
+
+}
+
+.inntektsendring-modal-content-wrapper {
+  margin: 1rem;
+}
+
+.inntektsendring-modal-tittel-wrapper {
+  margin-right: 3rem;
 }
