--- a/src/app/styles/app.less
+++ b/src/app/styles/app.less
@@ -1,3 +1,5 @@
+@import '@navikt/sif-common-core/lib/styles/globalStyles.less';
+
 .modal .modal__content {
     @media screen and (max-width: 800px) {
         padding: 0;
