Remove ~ from less-import

--- a/src/app/components/summary-section/summarySection.less
+++ b/src/app/components/summary-section/summarySection.less
@@ -1,4 +1,4 @@
-@import '~nav-frontend-core/less/_variabler.less';
+@import 'nav-frontend-core/less/_variabler.less';
 
 .summarySection  {
     padding-bottom: 2rem;
