--- a/src/app/styles/app.less
+++ b/src/app/styles/app.less
@@ -6,3 +6,19 @@
     }
 }
 
+@media screen and (max-width: 590px) {
+    .step__backLink {
+        margin-bottom: 0;
+    }
+    .stegindikator {
+        display: none;
+    }
+}
+
+.modal.calendarDialog {
+    width: 100%;
+    max-width: 45rem;
+    .dialogFormWrapper {
+        width: 100%;
+    }
+}
